--- a/index.html
+++ b/index.html
@@ -153,20 +153,23 @@
     <script>
       // --- CẤU HÌNH SUPABASE ---
       // !!! QUAN TRỌNG: Điền thông tin Supabase của bạn vào đây
-      const SUPABASE_URL = "https://klkqhcmvsfcbindhodru.supabase.co";
-      const SUPABASE_ANON_KEY =
-        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imtsa3FoY212c2ZjYmluZGhvZHJ1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE0NzI2OTksImV4cCI6MjA2NzA0ODY5OX0.zgYtYET9saIdLGPeSvvWUdn8NQ5VUQ9ULmhynedHqvQ";
+      const SUPABASE_URL = "YOUR_SUPABASE_URL";
+      const SUPABASE_ANON_KEY = "YOUR_SUPABASE_ANON_KEY";
 
-      // --- KHỞI TẠO ---
-      if (!SUPABASE_URL || SUPABASE_URL.includes("YOUR_SUPABASE_URL")) {
-        alert(
-          "Lỗi cấu hình: Vui lòng điền thông tin Supabase trong file index.html"
-        );
+      // --- KHỞI TẠO CLIENT ---
+      // Sửa lỗi: Khởi tạo client trước tiên và gán vào một biến có tên khác để tránh xung đột
+      let supabaseClient;
+      try {
+        if (!SUPABASE_URL || SUPABASE_URL.includes("YOUR_SUPABASE_URL")) {
+          throw new Error(
+            "Lỗi cấu hình: Vui lòng điền thông tin Supabase trong file index.html"
+          );
+        }
+        // Gọi createClient từ đối tượng 'supabase' toàn cục do CDN cung cấp
+        supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+      } catch (e) {
+        alert(e.message);
       }
-      const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-      let currentSessionId = null;
-      let selectedTargetId = null;
-      let realtimeChannel = null;
 
       // --- DOM ELEMENTS ---
       const phase1Div = document.getElementById("phase-1");
@@ -178,6 +181,11 @@
       const questionTitle = document.getElementById("question-title");
       const optionsContainer = document.getElementById("options-container");
       const voteCountInput = document.getElementById("vote-count-input");
+
+      // --- BIẾN TRẠNG THÁI ---
+      let currentSessionId = null;
+      let selectedTargetId = null;
+      let realtimeChannel = null;
 
       // --- HÀM XỬ LÝ ---
 
@@ -193,19 +201,19 @@
         optionsContainer.innerHTML = "";
         currentSessionId = null;
         selectedTargetId = null;
-        urlInput.value = "";
         if (realtimeChannel) {
-          supabase.removeChannel(realtimeChannel);
+          supabaseClient.removeChannel(realtimeChannel); // Sử dụng client đã khởi tạo
           realtimeChannel = null;
         }
+        urlInput.value = "";
         setStatus("Sẵn sàng nhập URL mới...");
       }
 
       function subscribeToSession(sessionId) {
         if (realtimeChannel) {
-          supabase.removeChannel(realtimeChannel);
+          supabaseClient.removeChannel(realtimeChannel); // Sử dụng client đã khởi tạo
         }
-        realtimeChannel = supabase
+        realtimeChannel = supabaseClient // Sử dụng client đã khởi tạo
           .channel(`remote_session_${sessionId}`)
           .on(
             "postgres_changes",
@@ -262,16 +270,18 @@
       // --- SỰ KIỆN ---
 
       fetchBtn.onclick = async () => {
+        if (!supabaseClient)
+          return alert(
+            "Supabase chưa được khởi tạo. Vui lòng kiểm tra lại cấu hình."
+          );
+
         const url = urlInput.value.trim();
-        if (!url) {
-          alert("Vui lòng nhập URL!");
-          return;
-        }
+        if (!url) return alert("Vui lòng nhập URL!");
 
         setStatus("Đang gửi yêu cầu đến Worker...", true);
 
         try {
-          const { data, error } = await supabase
+          const { data, error } = await supabaseClient // Sử dụng client đã khởi tạo
             .from("remote_sessions")
             .insert({ request_url: url, status: "url_submitted" })
             .select()
@@ -288,21 +298,18 @@
       };
 
       executeBtn.onclick = async () => {
-        if (!currentSessionId || selectedTargetId === null) {
-          alert("Vui lòng chọn một mục tiêu!");
-          return;
-        }
+        if (!supabaseClient) return alert("Supabase chưa được khởi tạo.");
+        if (!currentSessionId || selectedTargetId === null)
+          return alert("Vui lòng chọn một mục tiêu!");
+
         const count = parseInt(voteCountInput.value, 10);
-        if (isNaN(count) || count <= 0) {
-          alert("Số lượng không hợp lệ!");
-          return;
-        }
+        if (isNaN(count) || count <= 0) return alert("Số lượng không hợp lệ!");
 
         const command = { targetId: selectedTargetId, count: count };
         setStatus("Đang gửi lệnh thực thi đến Worker...", true);
 
         try {
-          const { error } = await supabase
+          const { error } = await supabaseClient // Sử dụng client đã khởi tạo
             .from("remote_sessions")
             .update({
               execution_command: command,
