--- a/index.html
+++ b/index.html
@@ -153,8 +153,9 @@
     <script>
       // --- CẤU HÌNH SUPABASE ---
       // !!! QUAN TRỌNG: Điền thông tin Supabase của bạn vào đây
-      const SUPABASE_URL = "YOUR_SUPABASE_URL";
-      const SUPABASE_ANON_KEY = "YOUR_SUPABASE_ANON_KEY";
+      const SUPABASE_URL = "https://klkqhcmvsfcbindhodru.supabase.co";
+      const SUPABASE_ANON_KEY =
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imtsa3FoY212c2ZjYmluZGhvZHJ1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE0NzI2OTksImV4cCI6MjA2NzA0ODY5OX0.zgYtYET9saIdLGPeSvvWUdn8NQ5VUQ9ULmhynedHqvQ";
 
       // --- KHỞI TẠO CLIENT ---
       // Sửa lỗi: Khởi tạo client trước tiên và gán vào một biến có tên khác để tránh xung đột
